--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simple-iotest"
-version = "3.56"
+version = "3.58"
 description = "A dead simple iotest for HPC environments"
 readme = "README.md"
 requires-python = ">=3.6"
@@ -25,3 +25,8 @@ iotest = "iotest:climain"
 
 [project.urls]
 "Homepage" = "https://github.com/yufei-pan/simple-iotest"
+
+[dependency-groups]
+dev = [
+    "memory-profiler>=0.61.0",
+]
